# fake_monet

./: .env.exemple  .gitignore  cycle-gan-art-generation.ipynb  cycle_gan.py  main.py  pyproject.toml
